# ProtoComm

./: .gitignore  AsioProtocols.cpp  AsioProtocols.hpp  CMakeLists.txt  CONTRIBUTING.md  LICENSE  ProtoComm.hpp  QtProtocols.cpp  README.md
.github/workflows/: github_pages.yaml  test.yaml
cmake/: ProtoCommConfig.cmake.in
docs/: Doxyfile
docs/examples/: CMakeLists.txt  frame-handlers.md  message.md  nvea-parser-async.cpp  nvea-parser.cpp  protocols.md
include/: CMakeLists.txt  QtProtocols.hpp
modules/: AsioProtocols.cppm  CMakeLists.txt  ProtoComm.cppm  QtProtocols.cppm
src/: AsioProtocols.cpp  CMakeLists.txt
test/: AsioTest.cpp  CMakeLists.txt  ProtoCommTest.cpp  QtTest.cpp  TestUtils.hpp  test_main.cpp
